test_suite/tests/ui/unknown-attribute/container.stderr
error: unknown serde container attribute `abc`
  --> $DIR/container.rs:12:10
   |
12 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

