test_suite/tests/ui/unknown-attribute/container.rs
#[macro_use]
extern crate serde_derive;

#[derive(Serialize)]
#[serde(abc = "xyz")]
struct A {
    x: u32,
}

fn main() {}
